<resources>
    <string name="app_name">ReusApp</string>
    <string name="create_account">crear cuenta</string>
    <string name="login">Iniciar sesion</string>
    <string name="menu">inicio</string>
    <string name="how_i_recycle">como reciclo?</string>
    <string name="reusapp_img">ReusApp img</string>
    <string name="my_data">datos personales</string>
    <string name="queries">consultas</string>
    <string name="my_points">mis puntos</string>
    <string name="rewards">recompensas</string>
    <string name="profile">mi perfil</string>
    <string name="logout">cerrar sesion</string>
    <string name="xcolors">por colores</string>
    <string name="back">regresar al inicio</string>
    <string name="update_password">actualizar contraseña</string>
    <string name="data_protected">proteccion de datos</string>
    <string name="help">ayuda</string>
    <string name="prueba">prueba</string>
    <string name="uis">Uis</string>
    <string name="name">Nombres</string>
    <string name="lastName">Apellidos</string>
    <string name="identification">Cedula de ciudadania</string>
    <string name="email">Correo</string>
    <string name="address">Direccion</string>
    <string name="password">Contraseña</string>
    <string name="welcome">bienvenid@</string>
    <string name="necessary_data">Todos los datos son necesarios</string>
    <string name="exampleEmail">micorreo@example.com</string>
    <string name="emailInvalid">Correo invalido</string>
    <string name="passInvalid">Contraseña invalida</string>
    <string name="currentPass">Contraseña actual</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="exit">Salir</string>
    <!--  -->
</resources>