<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingVertical="32dp"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ReusApp"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/reusapp_img"
        android:src="@drawable/reusapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/radius" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReusApp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmailLogin"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/black"
            android:hint="@string/exampleEmail"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/etEmpty" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassLogin"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="21"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/etEmpty" />

        <Button
            android:id="@+id/btnLogin2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttom"
            android:contentDescription="@string/uis"
            android:text="@string/login"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>