<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    android:paddingVertical="32dp"
    tools:context=".profileActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/reusapp_img"
        android:src="@drawable/reusapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/uis"
        android:src="@drawable/uis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textAllCaps="true"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <Button
        android:id="@+id/btnMyData"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/buttom"
        android:text="@string/my_data"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleProfile" />

    <Button
        android:id="@+id/btnUpdatePass"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttom"
        android:text="@string/update_password"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMyData" />

    <Button
        android:id="@+id/btnPolitics"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttom"
        android:text="@string/data_protected"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdatePass" />

    <Button
        android:id="@+id/btnHelp"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/buttom"
        android:text="@string/help"
        android:textAllCaps="true"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPolitics" />





</androidx.constraintlayout.widget.ConstraintLayout>