<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="16dp"
    android:paddingVertical="32dp"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ReusApp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/reusapp_img"
        android:src="@drawable/reusapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/radius" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/uis"
        android:src="@drawable/uis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReusApp" />


    <Button
        android:id="@+id/btncreateAccount"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/buttom"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/radius" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:backgroundTint="@color/buttom"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btncreateAccount"
        app:shapeAppearanceOverlay="@style/radius" />


</androidx.constraintlayout.widget.ConstraintLayout>